[gd_scene load_steps=6 format=3 uid="uid://bs2c8aaftclwu"]

[ext_resource type="Script" path="res://demo.gd" id="1_cbjxw"]
[ext_resource type="Texture2D" uid="uid://qv7qneotub2t" path="res://assets/bt_panel.svg" id="1_hp567"]
[ext_resource type="Texture2D" uid="uid://ddbnn6n8ggkyg" path="res://assets/bt_pause.svg" id="2_1rclq"]
[ext_resource type="Texture2D" uid="uid://b71jtyxrrev26" path="res://assets/bt_restart.svg" id="3_t6av5"]
[ext_resource type="Texture2D" uid="uid://cyhn13d8c36o4" path="res://assets/bt_screenshot.svg" id="4_rrr1c"]

[node name="P5" type="SubViewportContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_cbjxw")

[node name="SketchViewport" type="SubViewport" parent="."]
unique_name_in_owner = true
handle_input_locally = false
size = Vector2i(100, 100)
render_target_update_mode = 4

[node name="ViewportBg" type="ColorRect" parent="SketchViewport"]
unique_name_in_owner = true
offset_right = 100.0
offset_bottom = 100.0
mouse_filter = 2

[node name="Canvas" type="Node2D" parent="SketchViewport"]
unique_name_in_owner = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="LabelWarningMsg" type="Label" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -173.0
offset_top = -18.5
offset_right = 173.0
offset_bottom = 18.5
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 2
theme_override_font_sizes/font_size = 28
text = "You need to set a sketch first !"

[node name="BtMenu" type="TextureButton" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(48, 48)
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -48.0
offset_bottom = 48.0
grow_horizontal = 0
texture_normal = ExtResource("1_hp567")

[node name="Panel" type="Panel" parent="CanvasLayer"]
unique_name_in_owner = true
visible = false
self_modulate = Color(1, 1, 1, 0.470588)
clip_contents = true
custom_minimum_size = Vector2(50, 0)
anchors_preset = 11
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 0
grow_vertical = 2

[node name="BoxButton" type="VBoxContainer" parent="CanvasLayer/Panel"]
clip_contents = true
custom_minimum_size = Vector2(48, 0)
layout_mode = 1
anchors_preset = 13
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -24.0
offset_right = 24.0
grow_horizontal = 2
grow_vertical = 2

[node name="BtHide" type="TextureButton" parent="CanvasLayer/Panel/BoxButton"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("1_hp567")
stretch_mode = 0

[node name="BtPause" type="TextureButton" parent="CanvasLayer/Panel/BoxButton"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("2_1rclq")

[node name="BtRestart" type="TextureButton" parent="CanvasLayer/Panel/BoxButton"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
texture_normal = ExtResource("3_t6av5")
stretch_mode = 0

[node name="BtCurrentColor" type="ColorPickerButton" parent="CanvasLayer/Panel/BoxButton"]
unique_name_in_owner = true
visible = false
clip_contents = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
tooltip_text = "CURRENT COLOR"
color = Color(1, 1, 1, 1)

[node name="BtSaveImage" type="TextureButton" parent="CanvasLayer/Panel/BoxButton"]
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
tooltip_text = "SAVE SCREENSHOT"
texture_normal = ExtResource("4_rrr1c")
stretch_mode = 0

[node name="LabelFps" type="Label" parent="CanvasLayer/Panel/BoxButton"]
unique_name_in_owner = true
custom_minimum_size = Vector2(48, 48)
layout_mode = 2
text = "60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="FileDialog" type="FileDialog" parent="."]
unique_name_in_owner = true
size = Vector2i(312, 157)
access = 2
filters = PackedStringArray("*.png")

[connection signal="pressed" from="CanvasLayer/BtMenu" to="." method="_on_bt_menu_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/BoxButton/BtHide" to="." method="_on_bt_hide_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/BoxButton/BtPause" to="." method="_on_bt_pause_pressed"]
[connection signal="pressed" from="CanvasLayer/Panel/BoxButton/BtRestart" to="." method="_on_bt_restart_pressed"]
[connection signal="color_changed" from="CanvasLayer/Panel/BoxButton/BtCurrentColor" to="." method="_on_color_BtCurrentColor_changed"]
[connection signal="pressed" from="CanvasLayer/Panel/BoxButton/BtSaveImage" to="." method="_on_bt_save_image_pressed"]
[connection signal="file_selected" from="FileDialog" to="." method="_on_file_dialog_file_selected"]
